@@ -5,6 +5,9 @@ adminGuiAllowed = true
 [DefaultMgr]
 requiresAuth    = false
 
+[ModuleConfigMgr]
+requiresAuth    = false
+
 [ModuleMgr]
 requiresAuth    = true
 adminGuiAllowed = true
