@@ -1,0 +1,44 @@
+<div id="dhtmltooltip"></div>
+<script type="text/javascript" src="{webRoot}/js/tooltip.js"></script>
+
+<h1 class="pageTitle">{translate(pageTitle)}</h1>
+<span flexy:if="msgGet()">
+    {msgGet()}<br />
+        {foreach:aErrors,idx,errorMessage}
+            {errorMessage}<br />
+        {end:}
+</span>
+<p class="alignCenter">{translate(#Please use the following form to edit your config file#)}.</p>
+
+<form name="conf" method="post" flexy:ignore>
+<input type="hidden" name="action" value="update" />
+<table class="narrow">
+    <tr>
+        <th colspan="3">{translate(#Module Options#)}</th>
+    </tr>
+
+    {foreach:config,section,parameters}
+    <tr>
+        <th colspan="3">{section}</th>
+    </tr>
+
+    <tr flexy:foreach="parameters,parameter,value">
+        <td class="fieldName">{parameter}</td>
+        <td class="fieldValue">
+            <input type="text" name="config[{section}][{parameter}]" value="{value}" size="50" />
+        </td>
+        <td>&nbsp;</td>
+    </tr>
+
+    {end:}
+    <tr>
+        <td colspan="3" align="center">&nbsp;</td>
+    </tr>
+    <tr>
+        <td colspan="3" align="center">
+            <input class="wideButton" type="submit" name="submitted" value="{translate(#Save#)}" />&nbsp;
+            <input class="wideButton" type="button" name="cancel" value="{translate(#Cancel#)}" onClick="document.location.href='{makeUrl(##,#module#,#default#):h}'" />
+        </td>
+    </tr>
+</table>
+</form>
