@@ -15,6 +15,8 @@ BUGFIXES
             (sirphp)
 
 IMPROVEMENTS
+17-02-06    Added ability to edit modules' config files through GUI
+            (Eric Persson)
 16-02-06    Moved session options to their own config group
 16-02-06    All config keys now follow consistent bumpyCap naming standard
 15-02-06    Recover password and change password functionality broken down into
